movie-id as long; mongo yaml bean